@@ -4,12 +4,16 @@ import ch.wisv.events.core.model.customer.Customer;
 import ch.wisv.events.core.model.event.Event;
 import ch.wisv.events.core.model.product.Product;
 import ch.wisv.events.core.service.event.EventService;
+import ch.wisv.events.utils.LdapGroup;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+/**
+ * SalesServiceImpl class.
+ */
 @Service
 public class SalesServiceImpl implements SalesService {
 
@@ -35,11 +39,12 @@ public class SalesServiceImpl implements SalesService {
      */
     @Override
     public List<Event> getAllGrantedEventByCustomer(Customer customer) {
-        if (customer.getLdapGroups().contains(ch.wisv.events.utils.LdapGroup.BESTUUR)) {
+        if (customer.getLdapGroups().contains(LdapGroup.BESTUUR)) {
             return eventService.getUpcoming();
         } else {
-            return eventService.getUpcoming().stream().filter(events -> customer.getLdapGroups().contains(events.getOrganizedBy())).collect(Collectors
-                                                                                                                                                    .toList());
+            return eventService.getUpcoming().stream()
+                    .filter(events -> customer.getLdapGroups().contains(events.getOrganizedBy()))
+                    .collect(Collectors.toList());
         }
     }
 
@@ -52,7 +57,8 @@ public class SalesServiceImpl implements SalesService {
     public List<Product> getAllGrantedProductByCustomer(Customer customer) {
         List<Event> events = this.getAllGrantedEventByCustomer(customer);
 
-        return events.stream().flatMap(event -> event.getProducts().stream()).filter(product -> LocalDateTime.now()
-                .isAfter(product.getSellStart()) && LocalDateTime.now().isBefore(product.getSellEnd())).collect(Collectors.toList());
+        return events.stream().flatMap(event -> event.getProducts().stream())
+                .filter(product -> LocalDateTime.now().isAfter(product.getSellStart()) && LocalDateTime.now().isBefore(product.getSellEnd()))
+                .collect(Collectors.toList());
     }
 }
